--- a/package.json
+++ b/package.json
@@ -3,11 +3,37 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@emotion/cache": "11.10.3",
+    "@emotion/react": "11.10.4",
+    "@emotion/server": "11.10.0",
+    "@emotion/styled": "11.10.4",
+    "@mui/icons-material": "5.10.3",
+    "@mui/material": "5.10.3",
+    "date-fns": "2.29.2",
+    "gray-matter": "4.0.3",
+    "next": "12.2.5",
+    "next-auth": "4.10.3",
+    "next-pwa": "5.6.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "remark": "14.0.2",
+    "remark-html": "15.0.1",
+    "sharp": "0.30.7"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.3.0",
+    "@types/node": "18.7.14",
+    "@types/react": "18.0.18",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.23.0",
+    "eslint-config-next": "12.2.5",
+    "jest": "29.0.2",
+    "jest-environment-jsdom": "29.0.2",
+    "typescript": "4.8.2"
   }
 }
